registry: Increase max client body size
Prevents errors during container image uploads.

--- a/k8s/resources/image-registry/registry.yaml
+++ b/k8s/resources/image-registry/registry.yaml
@@ -85,6 +85,8 @@ metadata:
   labels:
     app.kubernetes.io/name: #@ name
     app.kubernetes.io/part-of: #@ category
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
 spec:
   rules:
   - host: #@ "registry." + domain
