--- a/k8s/resources/image-registry/registry.yaml
+++ b/k8s/resources/image-registry/registry.yaml
@@ -44,6 +44,13 @@ spec:
       containers:
       - name: #@ name
         image: "docker.io/library/registry:2"
+        env:
+        - name: REGISTRY_AUTH
+          value: htpasswd
+        - name: REGISTRY_AUTH_HTPASSWD_REALM
+          value: "Registry Realm"
+        - name: REGISTRY_AUTH_HTPASSWD_PATH
+          value: "/auth/htpasswd"
         resources:
           limits:
             memory: "256Mi"
@@ -51,6 +58,12 @@ spec:
         volumeMounts:
         - name: "registry-data"
           mountPath: /var/lib/registry
+        - name: htpasswd
+          mountPath: /auth
+      volumes:
+      - name: htpasswd
+        secret:
+          secretName: htpasswd
   volumeClaimTemplates:
   - metadata:
       name: "registry-data"
@@ -76,7 +89,6 @@ spec:
   ports:
   - port: 5000
 ---
-#! TODO: actually add authorization to restrict access to container images
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
