--- a/k8s/resources/ctfd/ctfd.yaml
+++ b/k8s/resources/ctfd/ctfd.yaml
@@ -84,6 +84,8 @@ metadata:
   labels:
     app.kubernetes.io/name: #@ name
     app.kubernetes.io/part-of: #@ category
+  annotations:
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   rules:
   - host: #@ domain
