k8s: Better CTFd resource allocation controls

--- a/k8s/resources/ctfd/ctfd.yaml
+++ b/k8s/resources/ctfd/ctfd.yaml
@@ -37,7 +37,7 @@ spec:
         resources:
           limits:
             cpu: #@ data.values.ctfd.vcpus
-            memory: #@ str(data.values.ctfd.vcpus * 384) + "Mi"
+            memory: #@ str(data.values.ctfd.vcpus * data.values.ctfd.memory) + "Mi"
           requests:
             cpu: #@ data.values.ctfd.vcpus / 2
         env:
