k8s: Add OAuth2 Proxy for protected ingresses

--- a/k8s/resources/values-schema.yaml
+++ b/k8s/resources/values-schema.yaml
@@ -5,6 +5,10 @@
 #@schema/validation min_len=1
 domain: ""
 
+#! Base domain name for all protected (internal) endpoints
+#@schema/validation min_len=1
+internal_domain: ""
+
 #! Pod replica counts
 replicas:
   ctfd: 1
