k8s/ctfd: Adjust resource settings for small pods
Small pods are better to work with, with almost no performance impact.

Therefore we:
- keep the default of 1 vCPU per pod
- add a slight overprovision to the CPU resources (increases performance)
- set a static worker count of 2 (instead of 3 w/ 1 vCPU per pod)

--- a/k8s/resources/ctfd/ctfd.yaml
+++ b/k8s/resources/ctfd/ctfd.yaml
@@ -36,8 +36,10 @@ spec:
         image: #@ registry + "/infra/ctfd:latest"
         resources:
           limits:
-            cpu: #@ data.values.ctfd.vcpus
+            cpu: #@ data.values.ctfd.vcpus * 1.2
             memory: #@ str(data.values.ctfd.vcpus * data.values.ctfd.memory) + "Mi"
+          requests:
+            cpu: #@ data.values.ctfd.vcpus
         env:
           - name: SECRET_KEY
             valueFrom:
@@ -45,7 +47,8 @@ spec:
                 name: ctfd-secrets
                 key: ctfd-secret-key
           - name: WORKERS
-            value: #@ str( data.values.ctfd.vcpus * 2 + 1 )
+            #!value: #@ str( data.values.ctfd.vcpus * 2 + 1 )
+            value: "2"
           - name: REDIS_URL
             value: "redis://redis:6379"
           - name: DATABASE_URL
