k8s/redis: Configure resource usage
- Disable persistence (save to disk)
- Limit memory to prevent OOM (+ update resource limit to match)
- Use LRU policy to remove keys under memory pressure
- Increase CPU limit for maximal performance from the single-core redis server

--- a/k8s/resources/ctfd/redis.yaml
+++ b/k8s/resources/ctfd/redis.yaml
@@ -25,10 +25,14 @@ spec:
       containers:
       - name: #@ name
         image: "docker.io/library/redis:7-alpine"
+        args:
+        - --maxmemory 768000000
+        - --maxmemory-policy volatile-lru
+        - --save ""
         resources:
           limits:
-            cpu: "1000m"
-            memory: "256Mi"
+            cpu: "1200m"
+            memory: "1024Mi"
 ---
 apiVersion: v1
 kind: Service
