k8s/ctfd: Use individual variables for CTFd DB config
Our CTFd PR has been merged, which means CTFd now supports passing database connection details
as individual environment variables instead of a single monolithic URL.

So we can now remove my shell script hack.

--- a/k8s/resources/ctfd/ctfd.yaml
+++ b/k8s/resources/ctfd/ctfd.yaml
@@ -51,8 +51,8 @@ spec:
             value: "2"
           - name: REDIS_URL
             value: "redis://redis:6379"
-          - name: DATABASE_URL
-            value: "mysql+pymysql://ctfd:{PASSWORD}@mariadb.ctfd/ctfd"
+          - name: DATABASE_HOST
+            value: "mariadb.ctfd"
           - name: DATABASE_PASSWORD
             valueFrom:
               secretKeyRef:
