k8s/ctfd: Enable reverse proxy support
Fixes an issue with mismatching schemas in redirects.

--- a/k8s/resources/ctfd/ctfd.yaml
+++ b/k8s/resources/ctfd/ctfd.yaml
@@ -46,6 +46,8 @@ spec:
               secretKeyRef:
                 name: ctfd-secrets
                 key: ctfd-secret-key
+          - name: REVERSE_PROXY
+            value: "True"
           - name: WORKERS
             #!value: #@ str( data.values.ctfd.vcpus * 2 + 1 )
             value: "2"
