k8s/ctfd: Allow large client requests
Fixes aborted file uploads during challenge deployment

--- a/k8s/resources/ctfd/ctfd.yaml
+++ b/k8s/resources/ctfd/ctfd.yaml
@@ -89,6 +89,8 @@ metadata:
     app.kubernetes.io/part-of: #@ category
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    #! allow for large uploads to CTFd
+    nginx.ingress.kubernetes.io/proxy-body-size: 512m
 spec:
   rules:
   - host: #@ domain
