k8s/ctfd: Implement object storage with Minio
Uploads are now stored and served by Minio, which avoids uploads existing on only a single CTFd pod.

--- a/k8s/resources/ctfd/ctfd.yaml
+++ b/k8s/resources/ctfd/ctfd.yaml
@@ -60,6 +60,19 @@ spec:
               secretKeyRef:
                 name: ctfd-secrets
                 key: database-password
+          - name: UPLOAD_PROVIDER
+            value: s3
+          - name: AWS_ACCESS_KEY_ID
+            value: "ctfd"
+          - name: AWS_SECRET_ACCESS_KEY
+            valueFrom:
+              secretKeyRef:
+                name: ctfd-secrets
+                key: minio-ctfd-secret-key
+          - name: AWS_S3_BUCKET
+            value: "ctfd"
+          - name: AWS_S3_ENDPOINT_URL
+            value: #@ "https://minio." + domain
       imagePullSecrets:
       - name: registry-creds
 ---
